--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,18 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
-            "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+          "assets": [
+  {
+    "glob": "**/*",
+    "input": "src/assets",
+    "output": "/assets"
+  },
+  {
+    "glob": "**/*",
+    "input": "public"
+  }
+]
+,
             "styles": [
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
